<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">stress</string>
    <string name="Email">Email</string>
    <string name="Username">UserName</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="mother_checkBox"></string>
    <string name="father_checkBox"></string>
    <string-array name="parent">
        <item>Mother</item>
        <item>Father</item>
    </string-array>

    <string name="name_user">First Second</string>
    <string name="forgot_password_button_label">Forgot password</string>




    <string name="login_help_instructions">Enter your email to recover your password</string>
    <string name="login_help_email_input_hint">Email</string>
    <string name="help_submit_button_label">Submit</string>
    <string name="facebook_login_button_label">Log in with Facebook</string>
    <string name="twitter_login_button_label">Log in with Twitter</string>


    <string name="number_involvement">0</string>
    <string name="label_involvement">ACTIVITY</string>
    <string name="number_questions">0</string>
    <string name="label_questions">QUESTION</string>
    <string name="number_points">0</string>
    <string name="label_points">POINTS</string>

    <string name="quick_question">Write your question...</string>
    <string name="user_picture">user_picture</string>


    <string name="question_text">What is your question?</string>
    <string name="location">Location</string>
    <string name="just_translation">I need only the translation</string>
    <string name="image_camera">This is a camera image</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_example">example</string>
    <string name="title_activity_board_questions">BoardQuestions</string>


    <string name="time_passed">Time h</string>
    <string name="question_picture">Translation Only</string>
    <string name="number_replies">no.replies</string>
    <string name="add_interesting">WATCH</string>


    <string name="textquestionlabel">Question is</string>
    <string name="locationlabel">locatie</string>
    <string name="noreplieslabel">0</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_begin_here">BeginHere</string>
    <string name="title_activity_my_questions">MyQuestions</string>
    <string name="title_activity_settings">Settings</string>
    <string name="comment_text">text_of_comment</string>

    <string name="connected_check">Display of connection status between the the Kid and the Parent</string>


    <string name="text_mood">no mood to display</string>
    <string name="settings">Settings</string>

    <string name="instructions"></string>
    <color name="stressup">#8fbf4f</color>
    <color name="stressed">#c6001d</color>
    <color name="relaxed">#ffb82a</color>
    <color name="excited">#9d8cfe</color>
    <color name="breathing">#099E01</color>color>

</resources>